--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@octokit/rest": "^15.2.4",
         "axios": "^0.18.0",
+        "cron": "^1.3.0",
         "dotenv": "^5.0.1",
         "eslint": "^4.19.0",
         "filesize": "^3.6.0",
