--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node ./src/index.js"
+        "start": "yarn run compile && node ./lib/index.js",
+        "compile": "babel src/ -d lib/"
     },
     "dependencies": {
         "@octokit/rest": "^15.2.4",
         "axios": "^0.18.0",
+        "babel-cli": "^6.26.0",
+        "babel-eslint": "^8.2.2",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-flow": "^6.23.0",
         "cron": "^1.3.0",
         "dotenv": "^5.0.1",
-        "eslint": "^4.19.0",
+        "eslint": "^4.19.1",
+        "eslint-plugin-flowtype": "^2.46.1",
+        "eslint-plugin-import": "^2.9.0",
         "filesize": "^3.6.0",
         "filesize-parser": "1.4.2",
+        "flow-bin": "^0.68.0",
         "loglevel": "^1.6.1",
         "minimist": "^1.2.0",
         "shelljs": "^0.8.1"
