--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node ./src/index.js"
+        "start": "node ./src/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "@octokit/rest": "^15.2.4",
@@ -15,6 +16,7 @@
         "eslint": "^4.19.0",
         "filesize": "^3.6.0",
         "filesize-parser": "1.4.2",
+        "jest": "^22.4.3",
         "loglevel": "^1.6.1",
         "minimist": "^1.2.0",
         "shelljs": "^0.8.1"
